--- a/css/styles.css
+++ b/css/styles.css
@@ -16,11 +16,60 @@ body {
 .header-item {
 }
 
+.container {
+  width: 100%;
+  width: 1158px;
+  padding: 0 15px;
+  margin: 0 auto;
+}
+
+.header-container {
+  display: flex;
+  align-items: center;
+}
+
 .link {
   text-decoration: none;
 }
 .list {
   list-style: none;
+}
+
+p,
+h1,
+h2,
+h3 {
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
+img {
+  display: block;
+}
+
+ul {
+  list-style-type: none;
+  margin-top: 0;
+  margin-bottom: 0;
+  margin-left: 0;
+}
+
+.link-menu-item {
+  display: flex;
+  align-items: center;
+}
+
+.header-item {
+  padding-top: 24px;
+  padding-bottom: 24px;
+  flex-grow: 1;
+  justify-content: space-between;
+  border-bottom: 1px solid #e7e9fc;
+  height: 72px;
+}
+
+.header-container {
+  display: flex;
 }
 
 .link-logo {
@@ -32,11 +81,19 @@ body {
   letter-spacing: 0.03em;
   text-transform: uppercase;
   color: var(--logo);
+  align-items: center;
 }
 
 .web {
   color: var(--title-color);
 }
+
+.list-menu {
+  display: flex;
+  margin-left: 76px;
+  gap: 40px;
+}
+
 .link-menu {
   font-weight: 500;
   font-size: 16px;
@@ -56,6 +113,13 @@ body {
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
+  margin-left: auto;
+}
+
+.contact-list-item {
+  display: flex;
+  align-items: center;
+  gap: 40px;
 }
 
 .main-contact-address :hover,
@@ -69,16 +133,28 @@ body {
 
 .button-title-service {
   background-color: var(--title-color);
+  padding: 188px 0;
+  height: 600px;
+  margin-bottom: 120px;
 }
+
+.hero-container {
+}
+
 .main-title {
   font-size: 56px;
   line-height: 1.07;
   color: #ffffff;
   text-align: center;
   letter-spacing: 0.02em;
+  max-width: 496px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 48px;
 }
 
 .button-order {
+  padding: 16px 32px;
   font-family: "Roboto", sans-serif;
   font-style: normal;
   font-weight: 500;
@@ -86,9 +162,15 @@ body {
   line-height: 1.5;
   letter-spacing: 0.04em;
   color: #ffffff;
-  background-color: #4d5ae5;
   cursor: pointer;
+  align-items: center;
+  display: flex;
+  margin: auto;
+  background-color: #4d5ae5;
+  border: 1px;
+  border-radius: 4px;
 }
+
 .button-order:hover,
 .button-order:focus {
   background-color: #404bbf;
@@ -100,17 +182,35 @@ body {
   line-height: 1.11;
   color: var(--title-color);
   letter-spacing: 0.02em;
+  text-align: center;
+  margin-bottom: 72px;
+}
+
+.skills-list {
+  display: flex;
+  gap: 24px;
+}
+
+.skills-info {
+  width: calc((100% - 72px) / 4);
+}
+
+.all-info {
+  padding-bottom: 120px;
 }
 
 .main-list-info {
+  font-family: "Roboto", sans-serif;
   font-weight: 500;
   font-size: 20px;
   line-height: 1.2;
   color: var(--title-color);
   letter-spacing: 0.02em;
+  margin-bottom: 8px;
 }
 
 .info-main {
+  font-family: "Roboto", sans-serif;
   font-size: 16px;
   line-height: 1.5;
   color: var(--poragraf-color);
@@ -126,11 +226,33 @@ body {
   text-align: center;
   letter-spacing: 0.02em;
   text-transform: capitalize;
+  margin: 0 auto;
+  margin-bottom: 72px;
+}
+
+.skills-img-list {
+  display: flex;
+  gap: 24px;
+  padding-bottom: 120px;
 }
 
 .all-team {
   background-color: #f4f4fd;
+  padding-bottom: 120px;
 }
+
+.list-team {
+  display: flex;
+  gap: 24px;
+  width: calc((100% - 72px) / 4);
+}
+
+.info-team {
+  text-align: center;
+  background-color: #ffffff;
+  border-radius: 0px 0px 4px 4px;
+}
+
 .our-team {
   font-size: 36px;
   line-height: 1.11;
@@ -138,6 +260,8 @@ body {
   text-align: center;
   letter-spacing: 0.02em;
   text-transform: capitalize;
+  margin-bottom: 72px;
+  padding-top: 120px;
 }
 .name-team {
   font-family: "Roboto";
@@ -147,6 +271,9 @@ body {
   line-height: 1.2;
   color: var(--title-color);
   letter-spacing: 0.02em;
+  margin-bottom: 8px;
+  text-align: center;
+  padding-top: 32px;
 }
 
 .profession-team {
@@ -154,13 +281,14 @@ body {
   line-height: 1.5;
   color: var(--poragraf-color);
   letter-spacing: 0.02em;
-}
-.info-team {
-  background: #ffffff;
+  text-align: center;
+  padding-bottom: 32px;
 }
 
 .footer {
   background: var(--title-color);
+  padding-top: 100px;
+  padding-bottom: 100px;
 }
 .footer-text {
   font-family: "Roboto";
@@ -170,24 +298,8 @@ body {
   line-height: 1.5;
   color: #f4f4fd;
   letter-spacing: 0.02em;
-}
-
-/** --------------next-html-portfolio--------------- */
-
-.button-web-portfolio {
-  font-family: "Roboto", sans-serif;
-  background-color: #f4f4fd;
-  color: #4d5ae5;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 1.5;
-  letter-spacing: 0.04em;
-  cursor: pointer;
-}
-.choice-butoon :hover,
-.choice-butoon :focus {
-  background-color: #404bbf;
-  color: #ffffff;
+  max-width: 264px;
+  padding-top: 16px;
 }
 
 /** --------------next-html-portfolio--------------- */
@@ -198,6 +310,7 @@ body {
   line-height: 1.2;
   letter-spacing: 0.02em;
   color: var(--title-color);
+  margin-bottom: 8px;
 }
 .item-portfolio {
   font-size: 16px;
@@ -212,4 +325,72 @@ body {
 
 .web-footer {
   color: #f4f4fd;
+}
+
+.section-main {
+  padding-top: 96px;
+  padding-bottom: 120px;
+}
+
+.item-butoon {
+  display: flex;
+  justify-content: center;
+  gap: 24px;
+  margin-bottom: 72px;
+}
+
+.button-web-portfolio {
+  font-family: "Roboto", sans-serif;
+  color: #4d5ae5;
+  line-height: 1.5;
+  font-size: 16px;
+  font-weight: 500;
+  letter-spacing: 0.04em;
+  background-color: #f4f4fd;
+  cursor: pointer;
+  padding: 12px 24px;
+  border: 1px solid #e7e9fc;
+  border-radius: 4px;
+}
+
+.button-web-portfolio:hover {
+  color: #ffffff;
+  background-color: #404bbf;
+  border: 1px solid transparent;
+}
+.button-web-portfolio:active,
+.button-web-portfolio:focus {
+  color: #ffffff;
+  background-color: #404bbf;
+  border: 1px solid transparent;
+}
+
+.ul-portfolio {
+  display: flex;
+  flex-wrap: wrap;
+  column-gap: 24px;
+  row-gap: 48px;
+}
+
+.li-portfolio {
+  width: calc((100% - 48px) / 3);
+}
+
+.info-portfolio {
+  padding: 32px 16px;
+  border: 1px solid #e7e9fc;
+  border-top: none;
+  width: 360px;
+}
+.portfolio-list {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
 }
