--- a/css/styles.css
+++ b/css/styles.css
@@ -10,12 +10,6 @@ body {
   --logo: #4d5ae5;
 }
 
-.body-list {
-}
-
-.header-item {
-}
-
 .container {
   width: 100%;
   width: 1158px;
@@ -82,6 +76,7 @@ ul {
   text-transform: uppercase;
   color: var(--logo);
   align-items: center;
+  margin-right: 76px;
 }
 
 .web {
@@ -105,6 +100,8 @@ ul {
 .link-item-main :hover,
 .link-item-main :focus {
   color: #404bbf;
+}
+.link-item-main {
 }
 
 .contact-list {
@@ -135,7 +132,6 @@ ul {
   background-color: var(--title-color);
   padding: 188px 0;
   height: 600px;
-  margin-bottom: 120px;
 }
 
 .hero-container {
@@ -169,6 +165,8 @@ ul {
   background-color: #4d5ae5;
   border: 1px;
   border-radius: 4px;
+  display: block;
+  min-width: 169px;
 }
 
 .button-order:hover,
@@ -189,6 +187,7 @@ ul {
 .skills-list {
   display: flex;
   gap: 24px;
+  padding-left: 0;
 }
 
 .skills-info {
@@ -197,6 +196,7 @@ ul {
 
 .all-info {
   padding-bottom: 120px;
+  padding-top: 120px;
 }
 
 .main-list-info {
@@ -218,6 +218,10 @@ ul {
 }
 /** --------------skills-list-info --------------- */
 
+.are-we-doing {
+  padding: 120px 0;
+}
+
 .skills-doing {
   font-weight: 700;
   font-size: 36px;
@@ -233,24 +237,25 @@ ul {
 .skills-img-list {
   display: flex;
   gap: 24px;
-  padding-bottom: 120px;
 }
 
 .all-team {
   background-color: #f4f4fd;
-  padding-bottom: 120px;
+  padding: 120px 0;
 }
 
 .list-team {
   display: flex;
   gap: 24px;
-  width: calc((100% - 72px) / 4);
+}
+.team-container {
+  padding: 32px 16px;
 }
 
 .info-team {
-  text-align: center;
   background-color: #ffffff;
   border-radius: 0px 0px 4px 4px;
+  width: calc((100% - 72px) / 4);
 }
 
 .our-team {
@@ -263,7 +268,7 @@ ul {
   margin-bottom: 72px;
   padding-top: 120px;
 }
-.name-team {
+.list-team .name-team {
   font-family: "Roboto";
   font-style: normal;
   font-weight: 500;
@@ -273,16 +278,14 @@ ul {
   letter-spacing: 0.02em;
   margin-bottom: 8px;
   text-align: center;
-  padding-top: 32px;
 }
 
-.profession-team {
+.list-team .profession-team {
   font-size: 16px;
   line-height: 1.5;
   color: var(--poragraf-color);
   letter-spacing: 0.02em;
   text-align: center;
-  padding-bottom: 32px;
 }
 
 .footer {
@@ -299,7 +302,10 @@ ul {
   color: #f4f4fd;
   letter-spacing: 0.02em;
   max-width: 264px;
-  padding-top: 16px;
+}
+.link-logo-footer {
+  display: inline-block;
+  margin-bottom: 16px;
 }
 
 /** --------------next-html-portfolio--------------- */
