--- a/css/styles.css
+++ b/css/styles.css
@@ -43,9 +43,8 @@ img {
 
 ul {
   list-style-type: none;
-  margin-top: 0;
-  margin-bottom: 0;
-  margin-left: 0;
+  margin: 0;
+  padding-left: 0;
 }
 
 .link-menu-item {
